--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -1,68 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/stylesheets/style.css" />
-    
-    <div class="header-div">
-      <h1 class="header">BEEPER</h1>
-    </div>
-  </head>
-<body>
-  
-  <nav class="navbar">
-    <div class="logo"><img src="/public/images/pager_favicon/android-chrome-192x192.png" alt="">
-    </div>
-    <ul class="nav-ul">
-      <li class="home"><a href="posts/timeline">
-        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="pager" class="svg-inline--fa fa-pager fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M448 64H64a64 64 0 0 0-64 64v256a64 64 0 0 0 64 64h384a64 64 0 0 0 64-64V128a64 64 0 0 0-64-64zM160 368H80a16 16 0 0 1-16-16v-16a16 16 0 0 1 16-16h80zm128-16a16 16 0 0 1-16 16h-80v-48h80a16 16 0 0 1 16 16zm160-128a32 32 0 0 1-32 32H96a32 32 0 0 1-32-32v-64a32 32 0 0 1 32-32h320a32 32 0 0 1 32 32z"></path></svg>
-        <span>Home</span>
-      </a>
-    </li>
-      <li class="nav-list"><a href="/posts">
-        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="list-ul" class="svg-inline--fa fa-list-ul fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M48 48a48 48 0 1 0 48 48 48 48 0 0 0-48-48zm0 160a48 48 0 1 0 48 48 48 48 0 0 0-48-48zm0 160a48 48 0 1 0 48 48 48 48 0 0 0-48-48zm448 16H176a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h320a16 16 0 0 0 16-16v-32a16 16 0 0 0-16-16zm0-320H176a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h320a16 16 0 0 0 16-16V80a16 16 0 0 0-16-16zm0 160H176a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h320a16 16 0 0 0 16-16v-32a16 16 0 0 0-16-16z"></path></svg>
-        <span>All</span>
-      </a>
-    </li>
-    <% if (!user) { %>
-      <a href="/auth/google" class="siwg-link">
-        <button type="submit" class="siwg">
-          <img id="siwg-image" alt="Sign in with Google" />
-        </button>
-        <% } else{ %>
-          <li class="nav-list"><a href="/auth/logout">
-            <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="sign-out-alt" class="svg-inline--fa fa-sign-out-alt fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M497 273L329 441c-15 15-41 4.5-41-17v-96H152c-13.3 0-24-10.7-24-24v-96c0-13.3 10.7-24 24-24h136V88c0-21.4 25.9-32 41-17l168 168c9.3 9.4 9.3 24.6 0 34zM192 436v-40c0-6.6-5.4-12-12-12H96c-17.7 0-32-14.3-32-32V160c0-17.7 14.3-32 32-32h84c6.6 0 12-5.4 12-12V76c0-6.6-5.4-12-12-12H96c-53 0-96 43-96 96v192c0 53 43 96 96 96h84c6.6 0 12-5.4 12-12z"></path></svg>
-            <span>Logout</span>
-          </a>
-        </li>
-        <%} %>
-  </ul>
-  </nav>
-      <main class="index">
-        <section class="index-section-1">
-          <% posts.forEach(post => { %>
-          <div class="index-post-box">
-            <li class="index-li">   
-      <% if (user?.profile.avatar) { %>
-        <img 
-          src="<%= user.profile.avatar %>" 
-          alt="<%= user.profile.name %> avatar"
-        class="profile-image">
-        <p class="author"><%= user.profile.name %></p>
-        <% } %> 
-      <p class="post-content"> <%= post.content %></p>
-        <a href="/posts/<%= post._id %>" class="post-id">...</a>
-        <% if (user) { %>
-        <form action="/posts/<%= post._id %>?_method=DELETE" method="POST" class="del-form">
-          <button type="submit">X
-          </button>
-        </form>
-        <% } %> 
-            </li>
-              <% }) %>
-        </section>
-      </main>
-</body>
-</html>
-  
+<%- include('../partials/html-head') %>
+  <%- include('../partials/nav') %>
+
+    <main class="index">
+      <section class="index-section-1">
+        <% posts.forEach(post=> { %>
+          <li class="index-li">
+            <div class="post-box">
+              <% if (user?.profile.avatar) { %>
+                <img src="<%= user.profile.avatar %>" alt="<%= user.profile.name %> avatar" class="profile-image">
+                <p class="author">
+                  <%= user.profile.name %>
+                </p>
+                <% } %>
+                  <p class="post-content">
+                    <%= post.content %>
+                  </p>
+                  <a href="/posts/<%= post._id %>" class="post-id">...</a>
+                  <% if (user) { %>
+                    <form action="/posts/<%= post._id %>?_method=DELETE" method="POST" class="del-form">
+                      <button type="submit">X
+                      </button>
+                    </form>
+                    <% } %>
+            </div>
+          </li>
+          <% }) %>
+      </section>
+    </main>
+    <%- include('../partials/footer') %>
